--- a/app/views/mailchimp_actuation_rules/show.html.erb
+++ b/app/views/mailchimp_actuation_rules/show.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = MailchimpActuationRule -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <h1>Exibir Regra Mailchimp</h1>
 </div>
 
 <dl class="dl-horizontal">
@@ -16,12 +16,10 @@
   <% end %>
 <dl>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              mailchimp_actuation_rules_path, :class => 'btn btn-default' %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_mailchimp_actuation_rule_path(@mailchimp_actuation_rule), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+<%= link_to 'Voltar', mailchimp_actuation_rules_path, :class => 'btn btn-default' %>
+<%= link_to 'Editar', edit_mailchimp_actuation_rule_path(@mailchimp_actuation_rule), :class => 'btn btn-default' %>
+<%= link_to 'Excluir',
             mailchimp_actuation_rule_path(@mailchimp_actuation_rule),
               :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :data => { :confirm => 'Tem certeza?' },
               :class => 'btn btn-danger' %>
