--- a/app/views/activation_rules/_form.html.erb
+++ b/app/views/activation_rules/_form.html.erb
@@ -14,7 +14,6 @@
     <% end %>
 
     <%= f.submit nil, :class => 'btn btn-primary', value: 'Update' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-              activation_rules_path, :class => 'btn btn-default' %>
+    <%= link_to 'Cancelar', activation_rules_path, :class => 'btn btn-default' %>
   </div>
 <% end %>
