--- a/app/views/activation_rules/index.html.erb
+++ b/app/views/activation_rules/index.html.erb
@@ -7,9 +7,9 @@
   <table class="table table-striped" id='data_table'>
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th class="col-sm-2"><%=t '.actions', :default => t("helpers.actions") %></th>
+        <th>Nome</th>
+        <th>Descrição</th>
+        <th class="col-sm-3">Ações</th>
       </tr>
     </thead>
 
@@ -19,11 +19,11 @@
           <td><%= rule.name %></td>
           <td><%= rule.description %></td>
           <td>
-            <%= link_to 'Mostrar', rule, class: 'btn btn-success btn-xs'  %>
+            <%= link_to 'Exibir', rule, class: 'btn btn-success btn-xs'  %>
             <%= link_to 'Editar', edit_activation_rule_path(rule), :class => 'btn btn-default btn-xs' %>
-            <%= link_to 'Deletar', rule,
+            <%= link_to 'Excluir', rule,
                         :method => :delete,
-                        :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                        :data => { :confirm => 'Tem certeza?' },
                         :class => 'btn btn-xs btn-danger' %>
           </td>
         </tr>
@@ -34,6 +34,4 @@
 
 <br>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_activation_rule_path,
-            :class => 'btn btn-primary' %>
+<%= link_to 'Novo', new_activation_rule_path, :class => 'btn btn-primary' %>
