--- a/app/views/activation_rules/new.html.erb
+++ b/app/views/activation_rules/new.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = @activation_rule_name.constantize -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+  <h1>Nova Regra Hotmart</h1>
 </div>
 
 <%= render 'form' %>
