--- a/app/views/mailchimp_actuation_rules/edit.html.erb
+++ b/app/views/mailchimp_actuation_rules/edit.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = MailchimpActuationRule -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+  <h1>Editar Regra Mailchimp</h1>
 </div>
 
 <%= render 'form' %>
