--- a/app/views/mailchimp_actuation_rules/new.html.erb
+++ b/app/views/mailchimp_actuation_rules/new.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 <% else %>
   <div class="page-header">
-    <h1><%=t '.title', :default => [:'helpers.titles.actuation_new', "%{model} %{method} "], :model => model_class.model_name.human.titleize, :method => @method.name.titleize %></h1>
+    <h1>Nova Regra Mailchimp - <%= @method.name.titleize %></h1>
   </div>
 
   <%= render 'form' %>
