--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>Log</h1>
+  <h1>Notificações</h1>
 </div>
 
 <div class="table-responsive">
@@ -9,7 +9,7 @@
         <th>Regra Hotmart</th>
         <th>Retorno Mailchimp</th>
         <th>Data</th>
-        <th class="col-sm-2"><%=t '.actions', :default => t("helpers.actions") %></th>
+        <th class="col-sm-2">Ações</th>
       </tr>
     </thead>
 
@@ -20,9 +20,8 @@
           <td><%= simple_format log.mailchimp_response %></td>
           <td><%= log.created_at.strftime("%d/%m/%Y - %H:%M:%S") %></td>
           <td>
-            <%= link_to 'Exibir notificação',
-                        log, class: 'btn btn-success btn-xs'  %>
-            <%= link_to t('.destroy', :default => t("helpers.links.destroy")), log,
+            <%= link_to 'Exibir', log, class: 'btn btn-success btn-xs'  %>
+            <%= link_to 'Excluir', log,
                         :method => :delete,
                         :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                         :class => 'btn btn-xs btn-danger' %>
