--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -24,6 +24,11 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="menu_links">
           <ul class="nav navbar-nav navbar-right">
+            <li>
+              <button type="button" class="btn btn-default navbar-btn" id="tour">
+                <i class="fa fa-play-circle"></i> Iniciar Tour
+              </button>
+            </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= current_user.name %> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
