Criando tutorial com bootstrap tour

--- a/app/views/activation_rules/index.html.erb
+++ b/app/views/activation_rules/index.html.erb
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'Novo', new_activation_rule_path, :class => 'btn btn-primary' %>
+<%= link_to 'Novo', new_activation_rule_path, :class => 'btn btn-primary', id: 'botao_novo' %>
