--- a/app/views/api_keys/edit.html.erb
+++ b/app/views/api_keys/edit.html.erb
@@ -1,19 +1,31 @@
 <ul class="nav nav-tabs" role="tablist">
   <li class=<%= "active" if active_tab('HotmartApiKey') %>>
-    <%= link_to t('api.hotmart'), edit_hotmart_api_key_path(current_user.hotmart_api_key.first.id) %>
+    <%= link_to t('api.hotmart'),
+                edit_hotmart_api_key_path(current_user.hotmart_api_key.first.id),
+                id: 'hotmart_api_key_area' %>
   </li>
   <li class=<%= "active" if active_tab('MailchimpApiKey') %>>
-    <%= link_to t('api.mailchimp'), edit_mailchimp_api_key_path(current_user.mailchimp_api_key.first.id) %>
+    <%= link_to t('api.mailchimp'),
+                edit_mailchimp_api_key_path(current_user.mailchimp_api_key.first.id),
+                id: 'mailchimp_api_key_area' %>
   </li>
   <li class=<%= "active" if active_tab('HelpscoutApiKey') %>>
-    <%= link_to t('api.helpscout'), edit_helpscout_api_key_path(current_user.helpscout_api_key.first.id) %>
+    <%= link_to t('api.helpscout'),
+                edit_helpscout_api_key_path(current_user.helpscout_api_key.first.id),
+                id: 'helpscout_api_key_area' %>
   </li>
 </ul>
 
 <% if request.path =~ /^\/hotmart_api_keys\// %>
-  <mark><%= notification_url(current_user.hotmart_token) %></mark>
+  <div id="hotmart_callback" class="col-sm-6">
+    <mark><%= notification_url(current_user.hotmart_token) %></mark>
+  </div>
+  <br />
 <% end %>
 <% if request.path =~ /^\/helpscout_api_keys\// %>
-  <mark><%= helpscout_info_url(current_user.helpscout_token) %></mark>
+  <div id="helpscout_callback" class="col-sm-6">
+    <mark><%= helpscout_info_url(current_user.helpscout_token) %></mark>
+  </div>
+  <br />
 <% end %>
 <%= render :partial => 'form' %>
