--- a/app/views/mailchimp_actuation_rules/index.html.erb
+++ b/app/views/mailchimp_actuation_rules/index.html.erb
@@ -36,4 +36,7 @@
 
 <br>
 
-<%= link_to 'Novo', new_mailchimp_actuation_rule_path, :class => 'btn btn-primary' %>
+<%= link_to 'Novo',
+            new_mailchimp_actuation_rule_path,
+            :class => 'btn btn-primary',
+            id: 'botao_novo' %>
