--- a/app/views/rule_associations/index.html.erb
+++ b/app/views/rule_associations/index.html.erb
@@ -44,4 +44,5 @@
 
 <%= link_to 'Novo',
             new_rule_association_path,
-            :class => 'btn btn-primary' %>
+            :class => 'btn btn-primary',
+            id: 'botao_novo' %>
