--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -18,7 +18,7 @@
         <tr>
           <td><%= log.activation_rule.nil? ? 'Nenhuma regra ativada' : log.activation_rule.name %></td>
           <td><%= simple_format log.mailchimp_response %></td>
-          <td><%= log.created_at.strftime("%d/%m/%Y - %H:%M:%S") %></td>
+          <td><%= log.created_at.strftime("%Y/%m/%d - %H:%M:%S") %></td>
           <td>
             <%= link_to 'Exibir', log, class: 'btn btn-success btn-xs'  %>
             <%= link_to 'Excluir', log,
