--- a/app/views/mailchimp_actuation_rules/show.html.erb
+++ b/app/views/mailchimp_actuation_rules/show.html.erb
@@ -18,6 +18,7 @@
 
 <%= link_to 'Voltar', mailchimp_actuation_rules_path, :class => 'btn btn-default' %>
 <%= link_to 'Editar', edit_mailchimp_actuation_rule_path(@mailchimp_actuation_rule), :class => 'btn btn-default' %>
+<%= link_to 'Duplicar', new_mailchimp_actuation_rule_path(id: @mailchimp_actuation_rule.id), :class => 'btn btn-warning' %>
 <%= link_to 'Excluir',
             mailchimp_actuation_rule_path(@mailchimp_actuation_rule),
               :method => 'delete',
